@@ -1,6 +1,8 @@
 package com.example.backend.domain.post.service;
 
 import com.example.backend.domain.global.s3.S3Service;
+import com.example.backend.domain.member.entity.Member;
+import com.example.backend.domain.member.repository.MemberRepository;
 import com.example.backend.domain.post.dto.PostCreateRequest;
 import com.example.backend.domain.post.dto.PostResponse;
 import com.example.backend.domain.post.dto.PostUpdateRequest;
@@ -10,8 +12,6 @@ import com.example.backend.domain.post.repository.PostMediaRepository;
 import com.example.backend.domain.post.repository.PostRepository;
 import com.example.backend.domain.store.entity.Store;
 import com.example.backend.domain.store.repository.StoreRepository;
-import com.example.backend.domain.user.entity.Users;
-import com.example.backend.domain.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -21,22 +21,22 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class PostService {
 
     private final PostRepository postRepository;
-    private final UserRepository userRepository;
+    private final MemberRepository memberRepository;
     private final PostMediaRepository postMediaRepository;
     private final S3Service s3Service;
     private final StoreRepository storeRepository;
 
-    @Transactional
-    public PostResponse createPost(Long userId, PostCreateRequest postCreateRequest, List<MultipartFile> imageFiles) {
-        Users user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+    public PostResponse createPost(Long memberId, PostCreateRequest postCreateRequest, List<MultipartFile> imageFiles) {
+        Member member = memberRepository.findOrThrow(memberId);
 
         Store store = storeRepository.findOrThrow(postCreateRequest.getStoreId());
 
@@ -48,23 +48,21 @@ public class PostService {
                         throw new RuntimeException("S3 업로드 실패", e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        if (mediaUrls == null || mediaUrls.isEmpty()) {
-            throw new IllegalArgumentException("MediaUrls cannot be empty");
-        }
+        validateMediaUrls(mediaUrls);
 
         //post 생성
-        Post post = Post.of(user, store, postCreateRequest.getLocation(), postCreateRequest.getTitle(), postCreateRequest.getContent());
+        Post post = Post.of(member, store, postCreateRequest.getLocation(), postCreateRequest.getTitle(), postCreateRequest.getContent());
         postRepository.save(post);
 
         //정적 팩토리 메서드 이미지 등록(추후 CQRS 패턴 대비)
         List<PostMedia> mediaList = mediaUrls.stream()
                 .map(url -> PostMedia.of(post, url))
-                .collect(Collectors.toList());
+                .toList();
         postMediaRepository.saveAll(mediaList);
 
-        return PostResponse.from(post, mediaUrls, store);
+        return PostResponse.of(post, mediaUrls, store);
     }
 
     @Transactional(readOnly = true)
@@ -74,25 +72,24 @@ public class PostService {
         return page.map(post -> {
             List<String> mediaUrls = postMediaRepository.findAllByPost(post).stream()
                     .map(PostMedia::getMediaUrl)
-                    .collect(Collectors.toList());
-            return PostResponse.from(post, mediaUrls, post.getStore());
+                    .toList();
+            return PostResponse.of(post, mediaUrls, post.getStore());
         });
     }
 
     @Transactional(readOnly = true)
     public PostResponse getPostDetail(Long postId) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("Post not found"));
+        Post post = postRepository.findOrThrow(postId);
         List<String> mediaUrls = postMediaRepository.findAllByPost(post).stream()
                 .map(PostMedia::getMediaUrl)
-                .collect(Collectors.toList());
-        return PostResponse.from(post, mediaUrls, post.getStore());
+                .toList();
+        return PostResponse.of(post, mediaUrls, post.getStore());
     }
 
-    @Transactional
-    public PostResponse updatePost(Long postId, PostUpdateRequest postUpdateRequest, List<MultipartFile> imageFiles) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("Post not found"));
+    public PostResponse updatePost(Long postId, Long memberId, PostUpdateRequest postUpdateRequest, List<MultipartFile> imageFiles) {
+        Post post = postRepository.findOrThrow(postId);
+        Member member = memberRepository.findOrThrow(memberId);
+        validateIsOwner(member, post);
 
         //기존 이미지 조회
         List<PostMedia> allPosts = postMediaRepository.findAllByPost(post);
@@ -120,7 +117,7 @@ public class PostService {
                     throw new RuntimeException("S3 업로드 실패", e);
                 }
             }).toList();
-            List<PostMedia> newMedia = newMediaUrls.stream().map(url -> PostMedia.of(post, url)).collect(Collectors.toList());
+            List<PostMedia> newMedia = newMediaUrls.stream().map(url -> PostMedia.of(post, url)).toList();
             postMediaRepository.saveAll(newMedia);
         }
 
@@ -129,13 +126,13 @@ public class PostService {
         List<String> mediaUrls = postMediaRepository.findAllByPost(post)
                 .stream()
                 .map(PostMedia::getMediaUrl).toList();
-        return PostResponse.from(post, mediaUrls, post.getStore());
+        return PostResponse.of(post, mediaUrls, post.getStore());
     }
 
-    @Transactional
-    public void deletePost(Long postId) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("Post not found"));
+    public void deletePost(Long postId, Long memberId) {
+        Post post = postRepository.findOrThrow(postId);
+        Member member = memberRepository.findOrThrow(memberId);
+        validateIsOwner(member, post);
 
         List<PostMedia> medias = postMediaRepository.findAllByPost(post);
 
@@ -144,5 +141,17 @@ public class PostService {
             s3Service.deleteFile(media.getMediaUrl());
         }
         postRepository.delete(post);
+    }
+
+    private void validateMediaUrls(List<String> mediaUrls) {
+        if (mediaUrls == null || mediaUrls.isEmpty()) {
+            throw new IllegalArgumentException("MediaUrls cannot be empty");
+        }
+    }
+
+    private void validateIsOwner(Member member, Post post) {
+        if(!Objects.equals(member.getId(), post.getOwnerId())){
+            throw new IllegalArgumentException("this member is not owner of this post");
+        }
     }
 }
